// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for createting monitored source Check discard and save button 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main configurationTabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_service"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="service"
          id="bp3-tab-title_configurationTabs_service"
          role="tab"
          tabindex="0"
        >
          service
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_pipelines-studio.dependenciesGroupTitle"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="pipelines-studio.dependenciesGroupTitle"
          id="bp3-tab-title_configurationTabs_pipelines-studio.dependenciesGroupTitle"
          role="tab"
          tabindex="0"
        >
          pipelines-studio.dependenciesGroupTitle
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_configurationTabs_service"
        class="bp3-tab-panel"
        id="bp3-tab-panel_configurationTabs_service"
        role="tabpanel"
      >
        <div>
          <div
            class="saveDiscardButton"
          >
            <div
              class="saveHeader"
            >
              <div
                class="tagRender"
              >
                unsavedChanges
              </div>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="send-data"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 9 12"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                      fill="#25A6F7"
                    />
                    <path
                      d="M.5.775h7.005v.2H.5v-.2z"
                      stroke="#25A6F7"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main discardBtn Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main monitoredService StyledProps--margin-xxlarge"
          >
            <p
              class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
            >
              overview
            </p>
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="type"
                  >
                    typeLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="type"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Application"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="serviceRef"
                          type="text"
                          value="Updated Monitored service"
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addService Button--with-current-color Button--iconOnly"
                    type="button"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addEnv Button--with-current-color Button--iconOnly"
                    type="button"
                  />
                </div>
              </div>
              <hr
                class="divider"
              />
              <div
                class="StyledProps--font StyledProps--main main nameTagsDescription"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer TextInput--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          />
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group bp3-disabled"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      cv.monitoredServices.monitoredServiceName
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          disabled=""
                          name="name"
                          placeholder="common.namePlaceholder"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="description-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main sourceTableLabel StyledProps--color StyledProps--color-black"
          >
            cv.healthSource.defineYourSource
          </p>
          <div
            class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <p
                class="StyledProps--font StyledProps--main tableTitle"
              >
                cv.navLinks.adminSideNavLinks.activitySources
              </p>
              <div
                class="StyledProps--font StyledProps--main noData"
              >
                <div
                  class="StyledProps--font StyledProps--main noDataCard StyledProps--flex StyledProps--flex-align-center-center"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    style="align-items: center; margin-top: -48px; width: 470px;"
                  >
                    <span
                      class="bp3-icon bp3-icon-join-table StyledProps--main StyledProps--color StyledProps--color-grey600"
                      icon="join-table"
                    >
                      <svg
                        data-icon="join-table"
                        height="48"
                        viewBox="0 0 20 20"
                        width="48"
                      >
                        <desc>
                          join-table
                        </desc>
                        <path
                          d="M19 6h-4V2c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h4v4c0 .55.45 1 1 1h13c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1zM6 12H2V9h4v3zm0-4H2V5h4v3zm7 9H7v-3h6v3zm0-4H7V9h6v4zm0-5H7V5h6v3zm5 9h-4v-3h4v3zm0-4h-4v-3h4v3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    >
                      cv.changeSource.noData
                    </p>
                    <div
                      class="buttonContainer"
                    />
                  </div>
                </div>
              </div>
              <div>
                <a
                  href="/account/1234_accountId/cv/orgs/1234_org/projects/1234_project/monitoringservices/setup"
                >
                  + 
                  cv.changeSource.addChangeSource
                </a>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <p
                class="StyledProps--font StyledProps--main tableTitle"
              >
                connectors.cdng.healthSources.label
              </p>
              <div
                class="StyledProps--font StyledProps--main noData"
              >
                <div
                  class="StyledProps--font StyledProps--main noDataCard StyledProps--flex StyledProps--flex-align-center-center"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    style="align-items: center; margin-top: -48px; width: 470px;"
                  >
                    <span
                      class="bp3-icon bp3-icon-join-table StyledProps--main StyledProps--color StyledProps--color-grey600"
                      icon="join-table"
                    >
                      <svg
                        data-icon="join-table"
                        height="48"
                        viewBox="0 0 20 20"
                        width="48"
                      >
                        <desc>
                          join-table
                        </desc>
                        <path
                          d="M19 6h-4V2c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h4v4c0 .55.45 1 1 1h13c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1zM6 12H2V9h4v3zm0-4H2V5h4v3zm7 9H7v-3h6v3zm0-4H7V9h6v4zm0-5H7V5h6v3zm5 9h-4v-3h4v3zm0-4h-4v-3h4v3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    >
                      cv.healthSource.noData
                    </p>
                    <div
                      class="buttonContainer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="drawerlink"
              >
                <a
                  href="/account/1234_accountId/cv/orgs/1234_org/projects/1234_project/monitoringservices/setup"
                >
                  + 
                  cv.healthSource.addHealthSource
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for createting monitored source Health source table and environment services component renders 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main configurationTabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_service"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="service"
          id="bp3-tab-title_configurationTabs_service"
          role="tab"
          tabindex="0"
        >
          service
        </div>
        <div
          aria-controls="bp3-tab-panel_configurationTabs_pipelines-studio.dependenciesGroupTitle"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="pipelines-studio.dependenciesGroupTitle"
          id="bp3-tab-title_configurationTabs_pipelines-studio.dependenciesGroupTitle"
          role="tab"
          tabindex="0"
        >
          pipelines-studio.dependenciesGroupTitle
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_configurationTabs_service"
        class="bp3-tab-panel"
        id="bp3-tab-panel_configurationTabs_service"
        role="tabpanel"
      >
        <div>
          <div
            class="saveDiscardButton"
          >
            <div
              class="saveHeader"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main saveButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="send-data"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 9 12"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.533 5.013L2.279 6.301a.653.653 0 01-.94 0 .696.696 0 010-.966l2.394-2.46a.655.655 0 01.94 0l2.394 2.46c.127.13.194.302.194.48a.7.7 0 01-.194.48.655.655 0 01-.94 0l-1.26-1.282v5.94c0 .377-.3.686-.668.686a.678.678 0 01-.666-.685v-5.94z"
                      fill="#25A6F7"
                    />
                    <path
                      d="M.5.775h7.005v.2H.5v-.2z"
                      stroke="#25A6F7"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main discardBtn Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main monitoredService StyledProps--margin-xxlarge"
          >
            <p
              class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
            >
              overview
            </p>
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="type"
                  >
                    typeLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="type"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="Application"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <div
                    class="bp3-form-group"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="serviceRef"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addService Button--with-current-color Button--iconOnly"
                    type="button"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addEnv Button--with-current-color Button--iconOnly"
                    type="button"
                  />
                </div>
              </div>
              <hr
                class="divider"
              />
              <div
                class="StyledProps--font StyledProps--main main nameTagsDescription"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer TextInput--main"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          />
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group bp3-disabled"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      cv.monitoredServices.monitoredServiceName
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          disabled=""
                          name="name"
                          placeholder="common.namePlaceholder"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="description-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <label
                    class="Label--main bp3-label descriptionLabel"
                  >
                    optionalField
                    <span
                      class="bp3-icon StyledProps--main editOpen"
                      data-icon="Edit"
                      data-name="edit"
                      data-testid="tags-edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main sourceTableLabel StyledProps--color StyledProps--color-black"
          >
            cv.healthSource.defineYourSource
          </p>
          <div
            class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <p
                class="StyledProps--font StyledProps--main tableTitle"
              >
                cv.navLinks.adminSideNavLinks.activitySources
              </p>
              <div
                class="StyledProps--font StyledProps--main noData"
              >
                <div
                  class="StyledProps--font StyledProps--main noDataCard StyledProps--flex StyledProps--flex-align-center-center"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    style="align-items: center; margin-top: -48px; width: 470px;"
                  >
                    <span
                      class="bp3-icon bp3-icon-join-table StyledProps--main StyledProps--color StyledProps--color-grey600"
                      icon="join-table"
                    >
                      <svg
                        data-icon="join-table"
                        height="48"
                        viewBox="0 0 20 20"
                        width="48"
                      >
                        <desc>
                          join-table
                        </desc>
                        <path
                          d="M19 6h-4V2c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h4v4c0 .55.45 1 1 1h13c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1zM6 12H2V9h4v3zm0-4H2V5h4v3zm7 9H7v-3h6v3zm0-4H7V9h6v4zm0-5H7V5h6v3zm5 9h-4v-3h4v3zm0-4h-4v-3h4v3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    >
                      cv.changeSource.noData
                    </p>
                    <div
                      class="buttonContainer"
                    />
                  </div>
                </div>
              </div>
              <div>
                <a
                  href="/account/1234_accountId/cv/orgs/1234_org/projects/1234_project/monitoringservices/setup"
                >
                  + 
                  cv.changeSource.addChangeSource
                </a>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main StyledProps--margin-xxlarge"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
            >
              <p
                class="StyledProps--font StyledProps--main tableTitle"
              >
                connectors.cdng.healthSources.label
              </p>
              <div
                class="StyledProps--font StyledProps--main noData"
              >
                <div
                  class="StyledProps--font StyledProps--main noDataCard StyledProps--flex StyledProps--flex-align-center-center"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    style="align-items: center; margin-top: -48px; width: 470px;"
                  >
                    <span
                      class="bp3-icon bp3-icon-join-table StyledProps--main StyledProps--color StyledProps--color-grey600"
                      icon="join-table"
                    >
                      <svg
                        data-icon="join-table"
                        height="48"
                        viewBox="0 0 20 20"
                        width="48"
                      >
                        <desc>
                          join-table
                        </desc>
                        <path
                          d="M19 6h-4V2c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h4v4c0 .55.45 1 1 1h13c.55 0 1-.45 1-1V7c0-.55-.45-1-1-1zM6 12H2V9h4v3zm0-4H2V5h4v3zm7 9H7v-3h6v3zm0-4H7V9h6v4zm0-5H7V5h6v3zm5 9h-4v-3h4v3zm0-4h-4v-3h4v3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    >
                      cv.healthSource.noData
                    </p>
                    <div
                      class="buttonContainer"
                    />
                  </div>
                </div>
              </div>
              <div
                class="drawerlink"
              >
                <a
                  href="/account/1234_accountId/cv/orgs/1234_org/projects/1234_project/monitoringservices/setup"
                >
                  + 
                  cv.healthSource.addHealthSource
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
